Javascript buggy, but handles async updates from feeds.

--- a/static/chat.css
+++ b/static/chat.css
@@ -63,7 +63,7 @@ td {
 #inbox .feedmessage {
     padding-top: 0.25em;
     width: 600px;
-    background: #dcf0f2;
+    background: #e3f8ce;
 }
 
 #nav {
