One bugfix, for the javascript polling code, and then a whole bunch of buggy Python code

--- a/static/chat.css
+++ b/static/chat.css
@@ -45,6 +45,14 @@ td {
     background: #333;
 }
 
+#projectlist {
+    background: #eee;
+}
+
+.project {
+    background: #eee;
+}
+
 #body {
   position: absolute;
   bottom: 10px;
